--- a/website/package.json
+++ b/website/package.json
@@ -9,14 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
     "@types/d3": "^7.4.3",
+    "@types/three": "^0.179.0",
     "d3": "^7.9.0",
     "framer-motion": "^12.23.12",
+    "globe.gl": "^2.43.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-globe.gl": "^2.35.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
